Fixed stuff with the textarea
Hided scrollbar and added auto-scroll to bottom

--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,7 @@ body {
 #OutputShell {
   background-color: #000;
   resize: none;
+  overflow: hidden;
   color: #ccc;
   position: absolute;
   left: 1em;
